plugins {
	id 'org.springframework.boot' version '2.7.4'
	id 'io.spring.dependency-management' version '1.0.14.RELEASE'
	id 'java'
	id "org.flywaydb.flyway" version "8.4.2"
}

group = 'com.tweats'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
	mavenCentral()
}

dependencies {
	annotationProcessor 'org.projectlombok:lombok:1.18.24'
	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'

	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation('com.fasterxml.jackson.core:jackson-databind:2.13.4.2') {
		version {
			strictly '2.13.2.1'
		}
	}
	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
	implementation 'com.fasterxml.jackson:jackson-bom:2.13.4'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.6.9'
	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
	implementation 'org.postgresql:postgresql:42.5.0'
	implementation 'org.flywaydb:flyway-core'

	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: "junit", module: "junit"
	}

	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
	testImplementation('org.junit.jupiter:junit-jupiter-params:5.9.0')
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'

	flyway {
		url = 'jdbc:postgresql://localhost:5432/tweats'
		user = 'tweats'
		password = 'tweats'
	}
}


tasks.named('test') {
	useJUnitPlatform()
}